fixed errors fixed api
