# doc/api.yaml
@@ -287,12 +287,14 @@ components:
   responses:
     404NotFound:
       description: The resource was not found
-    500ServerError:
+    500InternalServerError:
       description: Internal Server Error
     400BadRequest:
       description: Bad Request
     204Successfull:
       description: The operation was successfull
+    401StatusUnauthorized:
+      description: You are not authorized
 security:
   - bearerAuth: []
 paths:
@@ -329,8 +331,8 @@ paths:
                 type: object
                 properties:
                   identifier:
-                    type: string
-                    example: Maria
+                    type: integer
+                    example: 1
   /users/:
     get:
       operationId: getUserProfile
@@ -351,12 +353,13 @@ paths:
             maxLength: 16
       responses:
         "200":
-          description: User found successfully
+          description: Profile found successfully
           content:
             application/json:
               schema: {$ref: "#/components/schemas/Profile"}
         "404": {$ref: "#/components/responses/404NotFound"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "400": {$ref: "#/components/responses/400BadRequest"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
   /users/{userId}:
     parameters:
       - $ref: "#/components/parameters/user_id"
@@ -378,8 +381,9 @@ paths:
           content:
             application/json:
               schema: {$ref: "#/components/schemas/User"}
+        "404": {$ref: "#/components/responses/404NotFound"}
         "400": {$ref: "#/components/responses/400BadRequest"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
   /users/{userId}/banned/:
     parameters:
     - $ref: "#/components/parameters/user_id"
@@ -395,9 +399,14 @@ paths:
           application/json:
             schema: {$ref: "#/components/schemas/User"}
       responses:
-        "204": {$ref: "#/components/responses/204Successfull"}
+        "200":
+          description: User banned successfully
+          content:
+            application/json:
+              schema: { $ref: "#/components/schemas/User" }
+        "404": {$ref: "#/components/responses/404NotFound"}
         "400": {$ref: "#/components/responses/400BadRequest"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
 
   /users/{userId}/banned/{bannedId}:
     parameters:
@@ -412,7 +421,8 @@ paths:
       responses:
         "204": {$ref: "#/components/responses/204Successfull"}
         "404": {$ref: "#/components/responses/404NotFound"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "400": {$ref: "#/components/responses/400BadRequest"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
   /users/{userId}/profile/photos/:
     parameters:
       - $ref: "#/components/parameters/user_id"
@@ -421,15 +431,21 @@ paths:
       tags: ["modifyProfile"]
       summary: Upload a photo
       description: |-
-        This method adds a new photo to the associated user. The new photo is contained in the body of the request. Returns the new photo id.
+        This method adds a new photo to the associated user. The new photo is 
+        contained in the body of the request. Returns the new photo.
       requestBody:
         content:
           application/json:
             schema: {$ref: "#/components/schemas/Photo"}
       responses:
-        "204": {$ref: "#/components/responses/204Successfull"}
+        "200":
+          description: User found successfully
+          content:
+            application/json:
+              schema: { $ref: "#/components/schemas/Photo" }
         "400": {$ref: "#/components/responses/400BadRequest"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "404": {$ref: "#/components/responses/404NotFound"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
   /users/{userId}/profile/photos/{photoId}:
     parameters:
       - $ref: "#/components/parameters/user_id"
@@ -443,7 +459,8 @@ paths:
       responses:
         "204": {$ref: "#/components/responses/204Successfull"}
         "404": {$ref: "#/components/responses/404NotFound"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "400": {$ref: "#/components/responses/400BadRequest"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
   /users/{userId}/profile/photos/{photoId}/likes/:
     parameters:
       - $ref: "#/components/parameters/user_id"
@@ -454,15 +471,20 @@ paths:
       summary: Like a photo
       description: |-
         This method adds a new like to the associated photo. The new like is contained in the body of the request. 
-        Returns the photo.
+        Returns the like.
       requestBody:
         content:
           application/json:
             schema: {$ref: "#/components/schemas/Like"}
       responses:
-        "204": {$ref: "#/components/responses/204Successfull"}
+        "200":
+          description: Like created successfully
+          content:
+            application/json:
+              schema: { $ref: "#/components/schemas/Like" }
         "400": {$ref: "#/components/responses/400BadRequest"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "404": {$ref: "#/components/responses/404NotFound"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
   /users/{userId}/profile/photos/{photoId}/likes/{likeId}:
     parameters:
       - $ref: "#/components/parameters/user_id"
@@ -477,7 +499,8 @@ paths:
       responses:
         "204": {$ref: "#/components/responses/204Successfull"}
         "404": {$ref: "#/components/responses/404NotFound"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "400": {$ref: "#/components/responses/400BadRequest"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
   /users/{userId}/profile/photos/{photoId}/comments/:
     parameters:
       - $ref: "#/components/parameters/user_id"
@@ -488,15 +511,20 @@ paths:
       summary: Comment a photo
       description: |-
         This method adds a new comment to the associated photo. The new comment is contained in the body of the request. 
-        Returns the photo.
+        Returns the comment.
       requestBody:
         content:
           application/json:
             schema: {$ref: "#/components/schemas/Comment"}
       responses:
-        "204": {$ref: "#/components/responses/204Successfull"}
+        "200":
+          description: User found successfully
+          content:
+            application/json:
+              schema: { $ref: "#/components/schemas/Comment" }
         "400": {$ref: "#/components/responses/400BadRequest"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "404": {$ref: "#/components/responses/404NotFound"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
   /users/{userId}/profile/photos/{photoId}/comments/{commentId}:
     parameters:
       - $ref: "#/components/parameters/user_id"
@@ -511,7 +539,8 @@ paths:
       responses:
         "204": {$ref: "#/components/responses/204Successfull"}
         "404": {$ref: "#/components/responses/404NotFound"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "400": {$ref: "#/components/responses/400BadRequest"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
   /users/{userId}/profile/following/:
     parameters:
       - $ref: "#/components/parameters/user_id"
@@ -533,21 +562,28 @@ paths:
                 minItems: 0
                 maxItems: 999999999
         "404": {$ref: "#/components/responses/404NotFound"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "400": {$ref: "#/components/responses/400BadRequest"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
     post:
       operationId: followUser
       tags: ["profileInteractions"]
       summary: Follow a user
       description: |-
-         This method is used to add an existing user to the 'following' collection. The user id is in the body of the request.
+         This method is used to add an existing user to the 'following' collection. 
+        The user id is in the body of the request. Return the profile followed
       requestBody:
         content:
           application/json:
             schema: {$ref: "#/components/schemas/User"}
       responses:
-        "204": {$ref: "#/components/responses/204Successfull"}
+        "200":
+          description: User found successfully
+          content:
+            application/json:
+              schema: { $ref: "#/components/schemas/Profile" }
         "400": {$ref: "#/components/responses/400BadRequest"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "404": {$ref: "#/components/responses/404NotFound"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
   /users/{userId}/profile/following/{followingId}:
     parameters:
       - $ref: "#/components/parameters/user_id"
@@ -561,4 +597,5 @@ paths:
       responses:
         "204": {$ref: "#/components/responses/204Successfull"}
         "404": {$ref: "#/components/responses/404NotFound"}
-        "500": {$ref: "#/components/responses/500ServerError"}
+        "400": {$ref: "#/components/responses/400BadRequest"}
+        "401": {$ref: "#/components/responses/401StatusUnauthorized"}
