# service/api/getUserProfile.go
@@ -12,23 +12,32 @@ func (rt *_router) getUserProfile(w http.ResponseWriter, r *http.Request, ps htt
 	myName := ps.ByName("username")
 	name := r.URL.Query().Get("username") //Get the user I want to search
 
-	isBanned := rt.db.IsBanned(name, myName)
-	if isBanned {
-		err := json.NewEncoder(w).Encode("You are banned")
-		if err != nil {
-			w.WriteHeader(http.StatusBadRequest)
-			return
-		}
-	}
-
 	isAuth := rt.db.IsAuthorized(getToken(r.Header.Get("Authorization")))
 	if !isAuth {
 		w.WriteHeader(http.StatusUnauthorized)
 		return
 	}
 
-	profile, _ := rt.db.GetUserProfile(name)
-	err := json.NewEncoder(w).Encode(profile)
+	isBanned, err := rt.db.IsBanned(name, myName)
+	if err != nil {
+		w.WriteHeader(http.StatusNotFound)
+		return
+	}
+
+	if isBanned {
+		err := json.NewEncoder(w).Encode("Profile not found")
+		if err != nil {
+			w.WriteHeader(http.StatusBadRequest)
+			return
+		}
+	}
+
+	profile, err := rt.db.GetUserProfile(name)
+	if err != nil {
+		w.WriteHeader(http.StatusNotFound)
+	}
+
+	err = json.NewEncoder(w).Encode(profile)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
