# service/api/likePhoto.go
@@ -9,12 +9,8 @@ import (
 
 func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	w.Header().Set("content-type", "application/json")
-	uploaderName := ps.ByName("userId")     //Get the name of the uploader of the photo
 	myName := r.URL.Query().Get("username") //Get my name
-	if myName == uploaderName {             //You cannot like your own photo!
-		w.WriteHeader(http.StatusMethodNotAllowed)
-		return
-	}
+
 	id, err := strconv.Atoi(ps.ByName("photoId")) //Get the id of the photo I want to like
 	if err != nil {                               //If I get an error, stop
 		w.WriteHeader(http.StatusBadRequest)
@@ -29,7 +25,8 @@ func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprout
 
 	like, err := rt.db.LikePhoto(uint64(id), myName)
 	if err != nil {
-		panic(err)
+		w.WriteHeader(http.StatusNotFound)
+		return
 	}
 
 	err = json.NewEncoder(w).Encode(like)
